<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fond_app_calcul_mental">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_app_calcul_mental"
        tools:context=".MainActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/TitreMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titreapp"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingBottom="20dp"/>
        <Button
            android:id="@+id/BoutonJouer"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:text="@string/btn_jouer"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/BoutonScore"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:text="@string/btn_score"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/BoutonAPropos"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/btn_a_propos"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/BoutonLangue"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/btn_langue"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>