<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TextAPropos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_a_propos"
            tools:ignore="MissingConstraints"
            android:textColor="@color/orange"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginTop="20sp"
            android:id="@+id/TextFonctionnalite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fonctionnalite"
            tools:ignore="MissingConstraints"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/TextFonctionnalite2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fonctionnalite2"
            tools:ignore="MissingConstraints"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="220dp"
            android:layout_height="244dp"
            android:background="@drawable/calculatrice"
            android:radius="11dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>