<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnregistrerActivity"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_enregistrer"
            android:textColor="@color/orange"
            android:textSize="20dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:id="@+id/SaisieNomUtilisateur"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:ems="8"
            android:inputType="textPersonName"
            android:hint="@string/sai_pseudo"
            android:autofillHints="name"
            android:padding="16dp"
            android:background="@color/white"/>



        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/BoutonEnregistrer"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/btn_enregistrer"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>