<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_meilleur_score"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="20dp"
            >
        </TextView>


        <TableLayout

            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1,2"
            android:gravity="center"
            android:layout_margin="20dp">
            <TableRow
                android:background="@color/libelle_score"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >



                <TableRow
                    android:background="#000000"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    >

                </TableRow>
            </TableRow>

            <!-- Première ligne -->
            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"

                >

                <TextView
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="@color/libelle_score"
                    android:gravity="center"
                    android:text="@string/text_pseudo"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_score"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/libelle_score"
                    android:gravity="center"
                    android:textStyle="bold"
                    />

            </TableRow>

            <!-- Deuxième ligne -->
            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/pseudo1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/info_score"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/info_score"
                    android:gravity="center"
                    />
            </TableRow>

            <!-- Troisième ligne -->

            <!-- Quatrième ligne -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#000000">

                <TextView
                    android:id="@+id/pseudo2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="@color/info_score"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="@color/info_score"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/pseudo3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/info_score"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/score3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/info_score"
                    android:gravity="center"

                    />

            </TableRow>

            <!-- Cinquième ligne -->
            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/pseudo4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/info_score"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/score4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/info_score"
                    android:gravity="center"
                    />

            </TableRow>
        </TableLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>